2005-04-25  Petr Ovtchenkov  <ptr@island...>

	* build/test/gcc.mak: workaround for [bug?] gmake, that sometimes loss
	increment of target-specific macro and, may be, under condition.
	Thanks Jeff Williams.

	* build/Makefiles/gmake/icc.mak: add icc 8.1 compiler-specific libs

	* build/Makefiles/gmake/icc.mak: detect icc version; add includes
	from compiler to include path

2005-04-23  Francois Dumont  <dums@stlport...>

	* stlport/stl/_ioerr.h: #error message modification thanks Michael Fink.
	
2005-04-22  Francois Dumont  <dums@stlport...>

	* stlport/stl/_istream.c: Fix _M_read_buffered function implementation, there
	used to be a wrong implicit conversion from streamsize to ptrdiff_t, which fail
	when sizeof(streamsize) > sizeof(ptrdiff_t). see 2005-04-21 Petr report.
	
	* test/unit/: Replaced all _STLP_NO_IOSTREAMS occurences with the STLport internal
	equivalent _STLP_USE_NO_IOSTREAMS. The first one is defined by the client while the
	second depends on the first and on the compiler abilities, makes the unit tests more
	portable.
	
	* stlport/stl/_cmath.h: Fix for Intel C++ compiler that also have all C math functions
	in global namespace.

2005-04-21  Francois Dumont  <dums@stlport...>

	* stlport/stl/_hashtable.h: Extend the hashtable template methods extension
	to the method computing the bucket from the key thanks Dominik Siatkowski.
	
	* stlport/stl/_threads.h: Disable 64 bits portability warning for MSVC compilers.
	MSVC do not see that the called function comes from a macro that is different
	under Win32 and Win64.
	
2005-04-21  Petr Ovtchenkov  <ptr@island...>

	* test/unit/sstream_test.cpp, fstream_test.cpp: integral type for
        ptrdiff_t shorter than for streamsize; this cause problem on
	Win32 platform, that support files larger 4GB.
	Thanks Timothy Tenebekov for report.

2005-04-20  Francois Dumont  <dums@stlport...>

	* stlport/stl/debug/_debug.c: Small Borland compiler fix to avoid call to
	vsnprintf before version 0x550 thanks esanfo.
	